--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(to bottom right, rgba(150, 0, 250, .1), rgba(150, 1, 250, 1), rgba(0, 250, 150, 1)), rgba(0, 250, 150, .1);
+  background-repeat: no-repeat;
+background-size: cover;
+height: 100vh;
 }
 
 code {
@@ -12,8 +16,21 @@ code {
     monospace;
 }
 
+.App {
+}
+
 .page {
-	border: 1px solid black;
-	padding: 10px;
+	color: white;
+    text-shadow: 1px 1px 2px black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
 	margin: 10px;
+}
+
+button {
+    width: 60%;
+    padding: 3%;
+
 }
