--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -3,34 +3,119 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to bottom right, rgba(150, 0, 250, .1), rgba(150, 1, 250, 1), rgba(0, 250, 150, 1)), rgba(0, 250, 150, .1);
+  background: linear-gradient(to bottom right, rgba(150, 0, 250, .1), rgba(150, 1, 250, 1), rgba(0, 250, 150, 1), rgba(0, 250, 150, .7));
   background-repeat: no-repeat;
-background-size: cover;
-height: 100vh;
+  background-size: cover;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  display: flex;
+  flex-direction: column;
+  padding: 0 5% 3%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  monospace;
 }
 
 .App {
+
 }
 
 .page {
-	color: white;
-    text-shadow: 1px 1px 2px black;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-	margin: 10px;
+  text-align: center;
 }
 
 button {
-    width: 60%;
-    padding: 3%;
-
+  width: 100%;
+  padding: 3%;
+  align-items: center;
+  background-color: rgba(250,250,250, .2);
+  background: linear-gradient(to bottom right, rgba(250, 250, 250, .8), rgba(0, 250, 150, 1), rgba(0, 250, 150, 1), rgba(250, 250, 150, .8));
+  border: 2px solid rgba(250,250,250, .5);
+  border-radius: 5px;
+  box-shadow: 2px 2px 3px rgba(0,0,0, .5);
+  margin: 3px;
+  color: white;
+  text-shadow: 1px 1px 2px black;
+  cursor: pointer;
 }
+
+button:hover {
+  color: black;
+  text-shadow: none;
+  background-image: none;
+  background-color: white;
+  border: 2px solid rgba(250,250,250, .5);
+}
+
+button:active {
+  background-image: none;
+}
+
+button:disabled {
+  color: rgba(250,250,250, 1);
+  background-color: rgba(250,250,250, .8);
+  background-image: none;
+  text-shadow: none;
+  cursor: not-allowed;
+}
+
+ul {
+  list-style: none;
+  padding: 0px;
+}
+
+.signOut, .backBtn {
+  background: linear-gradient(rgba(150, 1, 250, 1), rgba(150, 1, 250, 1), rgba(150, 1, 250, 1), rgba(250, 250, 150, .8));
+}
+
+.or {
+  margin: auto;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  background: linear-gradient(rgba(250,250,250, .4), rgba(250,250,250, 1));
+  margin: 0px;
+  padding: 5px 0px 0px;
+  box-shadow: 2px 2px 3px rgba(0,0,0, .5);
+}
+
+.nav li {
+  text-shadow: none;
+  text-align: center;
+  box-shadow: 2px 2px 3px rgba(0,0,0, .3);
+  align-self: center;
+  width: 100%;
+  border-radius: 0px 0px 3px 0px;
+  margin-top: 0;
+  text-decoration: none;
+}
+
+
+
+/*--Landing Page--*/
+
+.userDropDown {
+  color: black;
+  text-shadow: none;
+  font-weight: bold;
+  background: white;
+  padding: 10px 0px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 2px rgba(0,0,0, .5);
+  margin: auto;
+}
+
+.userDropDown li {
+  padding: 5px 0px;
+}
+
+.userDropDown li:hover {
+  color: white;
+  background-color: black;
+  box-shadow: 1px 1px 2px;
+}
+
