--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -94,6 +94,37 @@ ul {
   text-decoration: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+/*--Scrollbar--*/
+/* width */
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/*--ListQuestion.js--*/
+.pollList {
+  height: 45vw;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
 
 /*--Landing Page--*/
