--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -3,14 +3,16 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  background: linear-gradient(to bottom right, rgba(150, 0, 250, .1), rgba(150, 1, 250, 1), rgba(0, 250, 150, 1), rgba(0, 250, 150, .7));
+  background: linear-gradient(rgba(0, 0, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(250, 100, 0, 1), rgba(0, 0, 0, 1)) ;
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
   text-shadow: 1px 1px 2px black;
   display: flex;
   flex-direction: column;
-  padding: 0 5% 3%;
+  justify-content: center;
+  min-height: 100vh;
+
 }
 
 code {
@@ -23,21 +25,29 @@ code {
 }
 
 .page {
+    display: flex;
+    flex-flow: column wrap;
   text-align: center;
+  min-height: 50vh;
+  padding: 5vh 5vw;  
+}
+.Dashboard {
+    min-height: 100vh;
+    padding: 0;
 }
 
+
+
 button {
+    color: black;
+    font-size: 1.5em;
   width: 100%;
-  padding: 3%;
+  padding: 3vh 3vw;
   align-items: center;
-  background-color: rgba(250,250,250, .2);
-  background: linear-gradient(to bottom right, rgba(250, 250, 250, .8), rgba(0, 250, 150, 1), rgba(0, 250, 150, 1), rgba(250, 250, 150, .8));
-  border: 2px solid rgba(250,250,250, .5);
+  background-color: rgba(250,250,250, 1);
   border-radius: 5px;
   box-shadow: 2px 2px 3px rgba(0,0,0, .5);
-  margin: 3px;
-  color: white;
-  text-shadow: 1px 1px 2px black;
+  
   cursor: pointer;
 }
 
@@ -67,7 +77,13 @@ ul {
 }
 
 .signOut, .backBtn {
-  background: linear-gradient(rgba(150, 1, 250, 1), rgba(150, 1, 250, 1), rgba(150, 1, 250, 1), rgba(250, 250, 150, .8));
+color: white;
+background-color: black;
+margin-top: 2vh;
+}
+
+.submit {
+    margin-top: 2vh;
 }
 
 .or {
@@ -76,25 +92,28 @@ ul {
 
 .nav {
   display: flex;
-  justify-content: space-around;
-  background: linear-gradient(rgba(250,250,250, .4), rgba(250,250,250, 1));
   margin: 0px;
-  padding: 5px 0px 0px;
-  box-shadow: 2px 2px 3px rgba(0,0,0, .5);
 }
 
 .nav li {
+    color: black;
   text-shadow: none;
   text-align: center;
   box-shadow: 2px 2px 3px rgba(0,0,0, .3);
-  align-self: center;
   width: 100%;
-  border-radius: 0px 0px 3px 0px;
+  border-radius: 0px 3px 0px 0px;
   margin-top: 0;
   text-decoration: none;
+  align-self: center;
+  padding: 3% 0; 
+  background: linear-gradient(rgba(250,250,250, 1), rgba(250,250,250, .7));
+}
+.nav li:active {
+    background-color: rgba(0, 250, 150, 1);
 }
 
 a {
+    color: black;
   text-decoration: none;
 }
 
@@ -138,6 +157,7 @@ a {
   border-radius: 5px;
   box-shadow: 1px 1px 2px rgba(0,0,0, .5);
   margin: auto;
+  width: 100%;
 }
 
 .userDropDown li {
