--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -24,30 +24,108 @@ code {
 
 }
 
+
 .page {
-    display: flex;
-    flex-flow: column wrap;
+  display: flex;
+  flex-flow: column wrap;
   text-align: center;
   min-height: 50vh;
-  padding: 5vh 5vw;  
+  padding: 5vh 5vw;
+  max-width: 50%;
+  margin: auto;
 }
+
 .Dashboard {
-    min-height: 100vh;
-    padding: 0;
+  display: grid;
+  grid-template-columns: 25% 50% 25%;
+  min-height: 100vh;
+  padding: 0;
+  width: 100%;
+  text-align: center;
+}
+
+main {
+  background-color: black;
+}
+
+.polls {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+main {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.leaders {
+  grid-column-start: 3;
+  grid-column-end: 4;
 }
 
 
+
+.user-info {
+  border: 2px solid rgba(250, 100, 0, 1);
+  display: flex;
+  border-radius: 5px;
+  background-color: white;
+  margin: 2px;
+}
+
+.user-info .name {
+  float: left;
+}
+
+.user-info .scores {
+  display: flex;
+  justify-content: space-around;
+  color: rgba(250, 100, 0, 1);
+}
+
+.user-info img {
+  width: 10%;
+  height: 90%;
+  border: 2px solid white;
+  border-radius: 50%;
+  background-color: white;
+  float: left;
+  background-color: rgba(250, 100, 0, 1);
+  box-shadow: 2px 2px 2px gray;
+  margin: 4px;
+}
+
+aside .user-info .scores .answered, aside .user-info .scores .added {
+  display: none;
+}
+
+@media only screen and (max-width: 600px) {
+  aside {
+    display: none;
+  }
+  main {
+    position: absolute;
+  }
+
+  .pages {
+    padding: 0 2vw;
+  }
+
+  .main {
+    grid-column-start: 1;
+    grid-column-end: 4
+  }
+}
 
 button {
-    color: black;
-    font-size: 1.5em;
+  color: black;
+  font-size: 1.5em;
   width: 100%;
   padding: 3vh 3vw;
   align-items: center;
   background-color: rgba(250,250,250, 1);
   border-radius: 5px;
   box-shadow: 2px 2px 3px rgba(0,0,0, .5);
-  
   cursor: pointer;
 }
 
@@ -77,13 +155,13 @@ ul {
 }
 
 .signOut, .backBtn {
-color: white;
-background-color: black;
-margin-top: 2vh;
+  color: white;
+  background-color: black;
+  margin: 2vh 0;
 }
 
 .submit {
-    margin-top: 2vh;
+  margin-top: 2vh;
 }
 
 .or {
@@ -96,24 +174,24 @@ margin-top: 2vh;
 }
 
 .nav li {
-    color: black;
+  color: black;
   text-shadow: none;
   text-align: center;
   box-shadow: 2px 2px 3px rgba(0,0,0, .3);
   width: 100%;
-  border-radius: 0px 3px 0px 0px;
+  border-radius: 5px 5px 0px 0px;
   margin-top: 0;
   text-decoration: none;
   align-self: center;
-  padding: 3% 0; 
+  padding: 3% 0;
   background: linear-gradient(rgba(250,250,250, 1), rgba(250,250,250, .7));
 }
 .nav li:active {
-    background-color: rgba(0, 250, 150, 1);
+  background-color: rgba(0, 250, 150, 1);
 }
 
 a {
-    color: black;
+  color: black;
   text-decoration: none;
 }
 
@@ -138,11 +216,22 @@ a {
   background: #555;
 }
 
+input {
+  margin: 5px 10px 10px;
+  width: 90%;
+  height: 10vh;
+  border-radius: 5px;
+  text-align: center;
+}
+
 /*--ListQuestion.js--*/
 .pollList {
-  height: 45vw;
+  height: 23vh;
   overflow-y: scroll;
   overflow-x: hidden;
+  font-size: .6em;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 
 
