--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -3,11 +3,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    border: 2px solid red;
     background-size: cover;
-    background-image: linear-gradient(red, yellow);
+    background-color: rgb(167,0,204);
     background-repeat: no-repeat;
-    height: 100vh;
 }
 
 code {
@@ -22,6 +20,95 @@ code {
 }
 
 .App {
-	border: 2px solid red;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+.App a {
+	text-decoration: none;
+	color: black;
 }
 
+.center {
+
+}
+
+.wouldYouRather {
+	border: 1px solid white;
+	font-size: 6vw;
+	margin: 0;
+	padding: 5px;
+}
+
+.Login h3 {
+	border: 1px solid white;
+	margin: 0;
+}
+
+.Login input {
+	width: 60vw;
+	margin: 1vh;
+	border-radius: 5px;
+	font-size: 4vh;
+	padding: 10px;
+	border: none;
+}
+
+.Login {
+	font-size: 3vh;
+	width: 80vw;
+	text-align: center;
+}
+
+.loginForm {
+	font-size: 1.3em;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.loginBtn {
+	width: 64vw;
+	border-radius: 5px;
+	border: none;
+	font-size: 4vh;
+	height: 8vh;
+	color: black;
+}
+
+.or {
+	font-size: 4vh;
+	width: 100%;
+	text-align: center;
+	margin: 3px 0 6px;
+}
+
+.App2 {
+	width: 80vw;
+	font-size: 1.5em;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+}
+
+.Dashboard {
+	display: inline-grid;
+	grid-template-columns: 1fr 3fr 1fr;
+}
+
+.polls {
+	grid-column: 1/1;
+	background-color: green;
+}
+
+.main {
+	grid-column: 2/4;
+	border: 1px solid black;
+}
+
+.leaders {
+	grid-column: 2/4;
+	border: 1px solid red;
+}
