--- a/would-you-rather-ui/src/index.css
+++ b/would-you-rather-ui/src/index.css
@@ -101,9 +101,22 @@ code {
 }
 
 #signOut {
-	position: absolute;
-	bottom: 7vh;
-	right: 6vw;
+	position: fixed;
+	top: 1vh;
+	right: 1vw;
+	border-radius: 5px;
+	border: none;
+	font-size: 3vh;
+	height: 8vh;
+	color: rgba(250,250,250,.5);
+	background-color: rgba(250,250,250, .5);
+	width: 10vw;
+
+}
+
+#signOut:hover {
+	color: rgba(250,250,250, 1);
+	background-color: rgba(0,0,0,1);
 }
 
 .passwordBtn {
